modal up and working for viewing single posts, BUT having issues with background not showing with modal up

--- a/python-project/react-app/src/context/Modal.css
+++ b/python-project/react-app/src/context/Modal.css
@@ -1,11 +1,22 @@
 /* ------------------- Modal Container ------------------- */
 #modal {
+    /* position: fixed;
+    top: 10%;
+    bottom: 10%;
+    left: 20%;
+    right: 20%; */
+    /* width: 70%; */
+    /* margin-top: -237.5px; */
+    /* margin-left: -237.5px; */
+
     position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 200px;
-    margin-top: -237.5px;
-    margin-left: -237.5px;
+    top: 0;
+    right: 15%;
+    left: 15%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #modal-background {
